--- a/centos7/tmux/tmux.conf
+++ b/centos7/tmux/tmux.conf
@@ -7,3 +7,9 @@ unbind %
 bind-key % split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind-key '"' split-window -v -c "#{pane_current_path}"
+
+# resize pane
+bind -r C-h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
